2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/planned_downtime.php: Fixed the
	value of time into update downtime for bug: 3004049

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* general/license/pandora_info_es_es.html,
	general/license/pandora_info_en.html, general/license/pandora_info_ca.html,
	general/license/pandora_info_es_la.html,
	general/license/pandora_info_fr.html: fixed unclose html tags in source
	code, the eclipse warm to me.

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php,
	godmode/reporting/reporting_builder.item_editor.php: deleted item type
	of agent_detailed.

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/conffiles: added file config.php as conf file for package Debian.
	 
	* DEBIAN/make_deb_package.sh: changed the source to "touch" conf file.

	* index.php: fixed the tests for config.php, now check if empty file then
	call installer.php. 

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed a
	undefined variable notice in visual console
	for bug: 3007450

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed the group
	icon size to 16x16 pixels by default.
	Bug: 3008508

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/configure_user.php: Fixed the edition
	of an user after create it. For bug: 3006988

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_agente.php: Fixed the
	pagination on agents view. Now the total agents not 
	include the disabled ones.
	Bug: 3008770

2010-06-01  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/setup.php: Ask for confirmation before enabling
	  'Enforce https' since access to Pandora FMS Console may be lost.

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* include/FusionCharts/FusionCharts_Gen.php: Fixed the
	blank line over the first dashboard widget when the