@@ -2,7 +2,7 @@
 
 // Pandora FMS - http://pandorafms.com
 // ==================================================
-// Copyright (c) 2005-2009 Artica Soluciones Tecnologicas
+// Copyright (c) 2005-2010 Artica Soluciones Tecnologicas
 // Please see http://pandorafms.org for full contribution list
 
 // This program is free software; you can redistribute it and/or
@@ -275,7 +275,7 @@ default:
 	}
 }
 
-echo "<h2>".__('Agent configuration')." &raquo; ".__('Modules')."</h2>";
+echo "<h2>".__('Modules')."</h2>";
 
 echo '<h3>'.__('Module assignment');
 if (isset ($extra_title))
